[ModerationCommands] fix member not having roles